# crypto-bot

./: README.md
arbitragebot/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
arbitragebot/src/: main.cpp
arbitragebot/src/datahandler/: exchangerateshandler.cpp  exchangerateshandler.h  idata.h  idatahandler.h  matrixdata.h  tickerdata.cpp  tickerdata.h
arbitragebot/src/net/: binancewebsocketconnection.cpp  binancewebsocketconnection.h  iconnection.h
arbitragebot/src/observer/: iobserver.h  isubject.h  websocketsubject.cpp  websocketsubject.h
arbitragebot/src/parser/: iparser.h  jsonnode.cpp  jsonnode.h  jsonparser.cpp  jsonparser.h
